test/batch_test/output/20190919_180837/01_Guardian_output.txt

================================================================

> # 打印密钥列表

================================================================

== [ 2019-09-19 18:08:37 ] Command [ No.1 ]

> qoscli keys list

--------------------------------
Expect命令:
expect 2>&1 /home/admin/qos/expect/run_cmd_via_ssh.expect 192.168.2.129 admin admin '~/qos/bin/qoscli keys list' 
命令执行结果:
NAME:	TYPE:	ADDRESS:						PUBKEY:
alice	import	qosacc1eqqnaps04l6ht9xahtrfgg59ksllcq9q85vje2	qosaccpub1zcjduepqzxez575h0j4kl0z7wn3muk4rn4n0265mwykyjguf9wh47nn8hqvqq2cqk9
bob	import	qosacc15fc26swvguzy9wksha9506smj2gne5r3jd978f	qosaccpub1zcjduepqxm2rfregh04ajq9q0j7eywr0emauus27dacwht4xp7l6l6grv9gqfvvycx
charles	import	qosacc1f37jvnehrfkpwzqtqtu5q9jx57034gvvtv5a36	qosaccpub1zcjduepq2g57x807xxw9e5utfdw6hmeg585y4qaazc9fw4am3u3alwggw0psk54pky
david	import	qosacc1n4sganm7v445h0dlqnlcq8hp8xgenl2sszd5pm	qosaccpub1zcjduepq6prl8a6k3hdnlq3dre2h8aar55yamhgrgu8vtak56wj6j2s5vzesgxhmt4
node	import	qosacc1qgwgmpsrd6anj3qjvjsqztj3xt9v24c4lygasm	qosaccpub1zcjduepqayn33delk6nledgejr0dz7azd3wnp4xncn4jvd4r6xxcydgcz64q6n2tr8
qcpSigner	import	qosacc1dkcds02rw2nwme34wvq4uym83nh8rz05h6x7nr	qosaccpub1zcjduepqyx6gejddufrke37hqkuu95wmn94xa3gjeqrmcfc56qpshq0l8mxqzlp2c2
starBanker	import	qosacc1xhlsragqdn0cp7a2dcf45fy8j0nej9jlrv753m	qosaccpub1zcjduepq7xhz09qgamfr3eqlpzy2cp8z9482j75f8x08sh005ryx4e8jds0s538my2
命令执行耗时: 508 ms
结果处理耗时: 18 ms
--------------------------------


================================================================

> # 查询特权用户列表, 此时应该一共有1个特权用户: Genesis特权用户node

================================================================

== [ 2019-09-19 18:08:38 ] Command [ No.2 ]

> qoscli query guardians --indent

--------------------------------
Expect命令:
expect 2>&1 /home/admin/qos/expect/run_cmd_via_ssh.expect 192.168.2.129 admin admin '~/qos/bin/qoscli query guardians --indent' 
命令执行结果:
[
  {
    "description": "Genesis-Guardian-Node",
    "guardian_type": 1,
    "address": "qosacc1qgwgmpsrd6anj3qjvjsqztj3xt9v24c4lygasm",
    "creator": ""
  },
  {
    "description": "Simple-Guardian-Alice",
    "guardian_type": 2,
    "address": "qosacc1eqqnaps04l6ht9xahtrfgg59ksllcq9q85vje2",
    "creator": "qosacc1qgwgmpsrd6anj3qjvjsqztj3xt9v24c4lygasm"
  }
]
命令执行耗时: 649 ms
结果处理耗时: 5 ms
--------------------------------


================================================================

> # 新增特权账户alice, 指定的creator是Genesis特权用户node, 预期交易成功

================================================================

== [ 2019-09-19 18:08:38 ] Command [ No.3 ]

> qoscli tx add-guardian --address alice --creator node --description 'Simple-Guardian-Alice' --indent <== 12345678

== 交易之前 ==

==== 可用交易列表 ====

| Index | Value                                                                                                                    |
| ----: | :----------------------------------------------------------------------------------------------------------------------- |
|     0 | active-validator                                                                                                         |
|     1 | add-guardian                                                                                                             |
|     2 | cancel-approve                                                                                                           |
|     3 | create-approve                                                                                                           |
|     4 | create-qsc                                                                                                               |
|     5 | create-validator                                                                                                         |
|     6 | decrease-approve                                                                                                         |
|     7 | delegate                                                                                                                 |
|     8 | delete-guardian                                                                                                          |
|     9 | deposit                                                                                                                  |
|    10 | halt-network                                                                                                             |
|    11 | increase-approve                                                                                                         |
|    12 | init-qcp                                                                                                                 |
|    13 | invariant-check                                                                                                          |
|    14 | issue-qsc                                                                                                                |
|    15 | modify-compound                                                                                                          |
|    16 | modify-validator                                                                                                         |
|    17 | redelegate                                                                                                               |
|    18 | revoke-validator                                                                                                         |
|    19 | submit-proposal                                                                                                          |
|    20 | transfer                                                                                                                 |
|    21 | unbond                                                                                                                   |
|    22 | use-approve                                                                                                              |
|    23 | vote                                                                                                                     |

==== 本地密钥名称-账户地址映射表 ====

| Index | Account Address                               | Key Name                                                                 |
| ----: | :-------------------------------------------: | -----------------------------------------------------------------------: |
|     0 | qosacc1eqqnaps04l6ht9xahtrfgg59ksllcq9q85vje2 | alice                                                                    |
|     1 | qosacc15fc26swvguzy9wksha9506smj2gne5r3jd978f | bob                                                                      |
|     2 | qosacc1f37jvnehrfkpwzqtqtu5q9jx57034gvvtv5a36 | charles                                                                  |
|     3 | qosacc1n4sganm7v445h0dlqnlcq8hp8xgenl2sszd5pm | david                                                                    |
|     4 | qosacc1qgwgmpsrd6anj3qjvjsqztj3xt9v24c4lygasm | node                                                                     |
|     5 | qosacc1dkcds02rw2nwme34wvq4uym83nh8rz05h6x7nr | qcpSigner                                                                |
|     6 | qosacc1xhlsragqdn0cp7a2dcf45fy8j0nej9jlrv753m | starBanker                                                               |

==== 用户账户地址列表 ====

| Index | Account Address                               | Key Name                                                                 |
| ----: | :-------------------------------------------: | -----------------------------------------------------------------------: |
|     0 | qosacc15fc26swvguzy9wksha9506smj2gne5r3jd978f | bob                                                                      |
|     1 | qosacc1dkcds02rw2nwme34wvq4uym83nh8rz05h6x7nr | qcpSigner                                                                |
|     2 | qosacc1eqqnaps04l6ht9xahtrfgg59ksllcq9q85vje2 | alice                                                                    |
|     3 | qosacc1f37jvnehrfkpwzqtqtu5q9jx57034gvvtv5a36 | charles                                                                  |
|     4 | qosacc1n4sganm7v445h0dlqnlcq8hp8xgenl2sszd5pm | david                                                                    |
|     5 | qosacc1qgwgmpsrd6anj3qjvjsqztj3xt9v24c4lygasm | node                                                                     |
|     6 | qosacc1xhlsragqdn0cp7a2dcf45fy8j0nej9jlrv753m | starBanker                                                               |

==== 用户账户余额情况: QOS ====

| Index | Account Address                               | Key Name                   | Balance              | Balance Change       |
| ----: | :-------------------------------------------: | -------------------------: | -------------------: | -------------------: |
|     0 | qosacc15fc26swvguzy9wksha9506smj2gne5r3jd978f |                        bob |              9998104 |                    0 |
|     1 | qosacc1dkcds02rw2nwme34wvq4uym83nh8rz05h6x7nr |                  qcpSigner |                    0 |                    0 |
|     2 | qosacc1eqqnaps04l6ht9xahtrfgg59ksllcq9q85vje2 |                      alice |              4999886 |                    0 |
|     3 | qosacc1f37jvnehrfkpwzqtqtu5q9jx57034gvvtv5a36 |                    charles |             10000000 |                    0 |
|     4 | qosacc1n4sganm7v445h0dlqnlcq8hp8xgenl2sszd5pm |                      david |                   16 |                    0 |
|     5 | qosacc1qgwgmpsrd6anj3qjvjsqztj3xt9v24c4lygasm |                       node |       49000134416759 |                    0 |
|     6 | qosacc1xhlsragqdn0cp7a2dcf45fy8j0nej9jlrv753m |                 starBanker |             10000020 |                    0 |

==== 用户账户余额情况: QSC 'star' ====

| Index | Account Address                               | Key Name                   | Balance              | Balance Change       |
| ----: | :-------------------------------------------: | -------------------------: | -------------------: | -------------------: |
|     0 | qosacc15fc26swvguzy9wksha9506smj2gne5r3jd978f |                        bob |                    0 |                    0 |
|     1 | qosacc1dkcds02rw2nwme34wvq4uym83nh8rz05h6x7nr |                  qcpSigner |                    0 |                    0 |
|     2 | qosacc1eqqnaps04l6ht9xahtrfgg59ksllcq9q85vje2 |                      alice |                    0 |                    0 |
|     3 | qosacc1f37jvnehrfkpwzqtqtu5q9jx57034gvvtv5a36 |                    charles |                    0 |                    0 |
|     4 | qosacc1n4sganm7v445h0dlqnlcq8hp8xgenl2sszd5pm |                      david |                    0 |                    0 |
|     5 | qosacc1qgwgmpsrd6anj3qjvjsqztj3xt9v24c4lygasm |                       node |                    0 |                    0 |
|     6 | qosacc1xhlsragqdn0cp7a2dcf45fy8j0nej9jlrv753m |                 starBanker |                    0 |                    0 |

== 执行交易 ==

~/qos/bin/qoscli tx add-guardian --address alice --creator node --description 'Simple-Guardian-Alice' --indent 

== 原始交易结果 ==


--------------------------------
Expect命令:
expect 2>&1 /home/admin/qos/expect/run_cmd_via_ssh.expect 192.168.2.129 admin admin '~/qos/bin/qoscli tx add-guardian --address alice --creator node --description 'Simple-Guardian-Alice' --indent' 12345678
命令执行结果:
{
  "check_tx": {
    "code": 1,
    "log": "{\"codespace\":\"sdk\",\"code\":1,\"message\":\"TxStd's ITx ValidateData error:  ERROR:\\nCodespace: guardian\\nCode: 604\\nMessage: \\\"guardian already exists\\\"\\n\"}",
    "gasWanted": "9223372036854775807",
    "gasUsed": "1207",
    "events": []
  },
  "deliver_tx": {},
  "hash": "1C0D4683A9DA2527C3889E9BE43248B67BAF52276782588DAF06D23024751BCC",
  "height": "0"
}
ERROR: {"codespace":"sdk","code":1,"message":"TxStd's ITx ValidateData error:  ERROR:\nCodespace: guardian\nCode: 604\nMessage: \"guardian already exists\"\n"}
命令执行耗时: 911 ms
结果处理耗时: 28 ms
--------------------------------

== 提取交易哈希 ==

1C0D4683A9DA2527C3889E9BE43248B67BAF52276782588DAF06D23024751BCC

== 查询链上交易记录 ==

ERROR: Tx: response error: RPC error -32603 - Internal error: Tx (1C0D4683A9DA2527C3889E9BE43248B67BAF52276782588DAF06D23024751BCC) not found

错误: 未查询到链上交易记录

== 交易失败 ==
